--- a/overview-benefits.tex
+++ b/overview-benefits.tex
@@ -5,13 +5,13 @@
 \includegraphics[width=\maxwidth]{figure/eval:best-1} 
 
 \end{knitrout}
-    \caption{\name achieves 33\% lower median slowdown. The three graphs show FCT distributions for the indicated request sizes: smaller than 10KB, between 10KB and 1MB, and greater than 1MB.  Note the different y-axis scales for each group of request sizes. Whiskers show $1.25 \times$ the inter-quartile range. For both \name and Optimal, performance benefits come from preventing short flows from queueing behind long ones.}
+    \caption{\name achieves 28\% lower median slowdown. The three graphs show FCT distributions for the indicated request sizes: smaller than 10KB, between 10KB and 1MB, and greater than 1MB.  Note the different y-axis scales for each group of request sizes. Whiskers show $1.25 \times$ the inter-quartile range. For both \name and Optimal, performance benefits come from preventing short flows from queueing behind long ones. \fc{Status quo whiskers are too large to fit on plot, mention the number here.}}
     \label{fig:eval:best}
 \end{figure}
-\newcommand{\overviewBenefitsBaselineMedian}{1.62\xspace}
-\newcommand{\overviewBenefitsBaselineTail}{10.77\xspace}
-\newcommand{\overviewBenefitsBundlerMedian}{1.08\xspace}
-\newcommand{\overviewBenefitsBundlerTail}{9.84\xspace}
-\newcommand{\overviewBenefitsOptimalMedian}{1.08\xspace}
-\newcommand{\overviewBenefitsOptimalTail}{4.46\xspace}
-\newcommand{\overviewBenefitsBundlerMedianImprovement}{33\%\xspace}
+\newcommand{\overviewBenefitsBaselineMedian}{1.76\xspace}
+\newcommand{\overviewBenefitsBaselineTail}{79.37\xspace}
+\newcommand{\overviewBenefitsBundlerMedian}{1.26\xspace}
+\newcommand{\overviewBenefitsBundlerTail}{41.38\xspace}
+\newcommand{\overviewBenefitsOptimalMedian}{1.07\xspace}
+\newcommand{\overviewBenefitsOptimalTail}{27.49\xspace}
+\newcommand{\overviewBenefitsBundlerMedianImprovement}{28\%\xspace}
