--- a/graphs/e2e.Rnw
+++ b/graphs/e2e.Rnw
@@ -3,35 +3,36 @@
 <<eval:e2e,fig.showtext=TRUE,cache=TRUE,echo=FALSE,warning=FALSE,fig.width='\\columnwidth',fig.height=3>>=
 library(ggplot2)
 library(showtext)
+library(patchwork)
 font_add_google("Lato")
 showtext_auto()
 
-df <- read.csv("data/e2e.data", sep=" ")
+df <- read.csv("data/new/endhost_cc_alg_choice_10k.data", sep=" ")
 
 df$Duration <- df$Duration.usec. / 1e6
 df$ofct <- (df$Size / 12e6) + 0.05
 df$Slowdown <- df$Duration / df$ofct
 
-df <- df[df$Alg == "copa_sfq" | df$Alg == "nobundler_fifo",]
+#df <- df[df$alg == "nimbus." | df$alg == "nobundler.",]
 
 big <- df[df$Size > 1e6,]
 med <- df[df$Size <= 1e6 & df$Size > 1e4,]
 small <- df[df$Size <= 1e4,]
 
 ggplot(small, aes(
-        x=e2e, fill=Alg, y=Slowdown
+        x=e2e, fill=alg, y=Slowdown
     )) +
     geom_boxplot(show.legend=FALSE,outlier.shape=NA) +
     ylab("Slowdown") + xlab(NULL) + 
     ggtitle("Small\n< 10KB") +
-    scale_fill_manual(limit=c("copa_sfq", "nobundler_fifo"),
+    scale_fill_manual(limit=c("nimbus.", "nobundler."),
         values = c(
-            "copa_sfq" = "#1b9e77",
-            "nobundler_fifo" = "#d95f02"
+            "nimbus." = "#1b9e77",
+            "nobundler." = "#d95f02"
         ),
         labels=c(
-            "copa_sfq" = "Bundler ",
-            "nobundler_fifo" = "Status Quo"
+            "nimbus." = "Bundler ",
+            "nobundler." = "Status Quo"
         )
     ) +
     coord_cartesian(ylim=c(1,5)) +
@@ -43,19 +44,19 @@ ggplot(small, aes(
         plot.title = element_text(angle=0,size=18, family="Lato", face="bold", hjust = 0.5)
     ) +
 ggplot(med, aes(
-        x=e2e, fill=Alg, y=Slowdown
+        x=e2e, fill=alg, y=Slowdown
     )) +
     geom_boxplot(outlier.shape=NA) +
     ylab(NULL) + xlab(NULL) +
     ggtitle("Medium\n10KB - 1MB") +
-    scale_fill_manual(limit=c("copa_sfq", "nobundler_fifo"),
+    scale_fill_manual(limit=c("nimbus.", "nobundler."),
         values = c(
-            "copa_sfq" = "#1b9e77",
-            "nobundler_fifo" = "#d95f02"
+            "nimbus." = "#1b9e77",
+            "nobundler." = "#d95f02"
         ),
         labels=c(
-            "copa_sfq" = "Bundler ",
-            "nobundler_fifo" = "Status Quo"
+            "nimbus." = "Bundler ",
+            "nobundler." = "Status Quo"
         )
     ) +
     coord_cartesian(ylim=c(1,15)) +
@@ -67,18 +68,18 @@ ggplot(med, aes(
         plot.title = element_text(angle=0,size=18, family="Lato", face="bold", hjust = 0.5)
     ) +
 ggplot(big, aes(
-        x=e2e, fill=Alg, y=Slowdown
+        x=e2e, fill=alg, y=Slowdown
     )) +
     geom_boxplot(show.legend=FALSE,outlier.shape=NA) +
     ylab(NULL) + ggtitle("Large\n> 1MB") + xlab(NULL) + 
-    scale_fill_manual(limit=c("copa_sfq", "nobundler_fifo"),
+    scale_fill_manual(limit=c("nimbus.", "nobundler."),
         values = c(
-            "copa_sfq" = "#1b9e77",
-            "nobundler_fifo" = "#d95f02"
+            "nimbus." = "#1b9e77",
+            "nobundler." = "#d95f02"
         ),
         labels=c(
-            "copa_sfq" = "Bundler ",
-            "nobundler_fifo" = "Status Quo"
+            "nimbus." = "Bundler ",
+            "nobundler." = "Status Quo"
         )
     ) +
     coord_cartesian(ylim=c(1,15)) +
