--- a/graphs/overview-benefits.Rnw
+++ b/graphs/overview-benefits.Rnw
@@ -7,28 +7,29 @@ font_add_google("Lato")
 showtext_auto()
 #library(patchwork)
 
-df <- read.csv("data/84Mbps-1bk-caidacdf.data", sep=" ")
+df <- read.csv("data/new/overview_benefits.data", sep=" ")
 df$Duration <- df$Duration.usec. / 1e6
 bw <- 12e6
 df$ofct <- (df$Size / bw) + 0.05
 df$Slowdown <- df$Duration / df$ofct
+df$scheme <- paste(df$alg, df$sch, sep="_")
 
 big <- df[df$Size > 1e6,]
 med <- df[df$Size <= 1e6 & df$Size > 1e4,]
 small <- df[df$Size <= 1e4,]
 
 ggplot(small, aes(
-        x=Alg, fill=Alg, y=Slowdown
+        x=scheme, fill=scheme, y=Slowdown
     )) +
     geom_boxplot(show.legend=FALSE,outlier.shape=NA) +
     ylab("Slowdown") +
     ggtitle("Small\n< 10KB") +
     scale_fill_brewer(type="qual", palette=2) +
     scale_x_discrete(
-        limit=c("nobundler_fifo", "copa_sfq", "nobundler_sfq"),
+        limit=c("nobundler_fifo", "copa+nimbus_sfq", "nobundler_sfq"),
         labels=c(
             "nobundler_fifo" = "Status Quo",
-            "copa_sfq" = "Bundler", 
+            "copa+nimbus_sfq" = "Bundler", 
             "nobundler_sfq" = "In-Network"
         ),
         scale_name=NULL, name=NULL
@@ -41,34 +42,34 @@ ggplot(small, aes(
         plot.title = element_text(angle=0,size=18, family="Lato", face="bold", hjust = 0.5)
     ) +
 ggplot(med, aes(
-        x=Alg, fill=Alg, y=Slowdown
+        x=scheme, fill=scheme, y=Slowdown
     )) +
     geom_boxplot(outlier.shape=NA) +
     ylab(NULL) +
     ggtitle("Medium\n10KB - 1MB") +
     scale_fill_manual(
-        limit=c("nobundler_fifo", "copa_sfq", "nobundler_sfq"),
+        limit=c("nobundler_fifo", "copa+nimbus_sfq", "nobundler_sfq"),
         labels=c(
             "nobundler_fifo" = "Status Quo  ",
-            "copa_sfq" = "Bundler  ", 
+            "copa+nimbus_sfq" = "Bundler  ", 
             "nobundler_sfq" = "In-Network"
         ),
         values = c(
             "nobundler_fifo" = "#d95f02",
-            "copa_sfq" = "#1b9e77",
+            "copa+nimbus_sfq" = "#1b9e77",
             "nobundler_sfq" = "#7570b3"
         )
     ) +
     scale_x_discrete(
-        limit=c("nobundler_fifo", "copa_sfq", "nobundler_sfq"),
+        limit=c("nobundler_fifo", "copa+nimbus_sfq", "nobundler_sfq"),
         labels=c(
             "nobundler_fifo" = "Status Quo",
-            "copa_sfq" = "Bundler", 
+            "copa+nimbus_sfq" = "Bundler", 
             "nobundler_sfq" = "In-Network"
         ),
         scale_name=NULL, name=NULL
     ) +
-    coord_cartesian(ylim=c(1,5)) +
+    coord_cartesian(ylim=c(1,16)) +
     theme_minimal() + 
     theme(
         legend.position="bottom",
@@ -78,22 +79,22 @@ ggplot(med, aes(
         plot.title = element_text(angle=0,size=18, family="Lato", face="bold", hjust = 0.5)
     ) +
 ggplot(big, aes(
-        x=Alg, fill=Alg, y=Slowdown
+        x=scheme, fill=scheme, y=Slowdown
     )) +
     geom_boxplot(show.legend=FALSE,outlier.shape=NA) +
     ylab(NULL) + ggtitle("Large\n> 1MB") +
     scale_fill_brewer(type="qual", palette=2,
         labels=c(
             "nobundler_fifo" = "Status Quo",
-            "copa_sfq" = "Bundler", 
+            "copa+nimbus_sfq" = "Bundler", 
             "nobundler_sfq" = "In-Network"
         )
     ) +
     scale_x_discrete(
-        limit=c("nobundler_fifo", "copa_sfq", "nobundler_sfq"),
+        limit=c("nobundler_fifo", "copa+nimbus_sfq", "nobundler_sfq"),
         scale_name=NULL, name=NULL
     ) +
-    coord_cartesian(ylim=c(1,15)) +
+    coord_cartesian(ylim=c(1,20)) +
     theme_minimal() + 
     theme(
         legend.position = "bottom",
@@ -102,11 +103,11 @@ ggplot(big, aes(
         plot.title = element_text(angle=0,size=18, family="Lato", face="bold", hjust = 0.5)
     )
 
-overview_benefits_bundler_results = quantile(df[df$Alg=="copa_sfq",]$Slowdown, c(0.5, 0.99))
-overview_benefits_baseline_results = quantile(df[df$Alg=="nobundler_fifo",]$Slowdown, c(0.5, 0.99))
-overview_benefits_optimal_results = quantile(df[df$Alg=="nobundler_sfq",]$Slowdown, c(0.5, 0.99))
+overview_benefits_bundler_results = quantile(df[df$scheme=="copa+nimbus_sfq",]$Slowdown, c(0.5, 0.99))
+overview_benefits_baseline_results = quantile(df[df$scheme=="nobundler_fifo",]$Slowdown, c(0.5, 0.99))
+overview_benefits_optimal_results = quantile(df[df$scheme=="nobundler_sfq",]$Slowdown, c(0.5, 0.99))
 @
-    \caption{\name achieves \Sexpr{round(100*(1-(overview_benefits_bundler_results[1] / overview_benefits_baseline_results[1])), 0)}\% lower median slowdown. The three graphs show FCT distributions for the indicated request sizes: smaller than 10KB, between 10KB and 1MB, and greater than 1MB.  Note the different y-axis scales for each group of request sizes. Whiskers show $1.25 \times$ the inter-quartile range. For both \name and Optimal, performance benefits come from preventing short flows from queueing behind long ones.}
+    \caption{\name achieves \Sexpr{round(100*(1-(overview_benefits_bundler_results[1] / overview_benefits_baseline_results[1])), 0)}\% lower median slowdown. The three graphs show FCT distributions for the indicated request sizes: smaller than 10KB, between 10KB and 1MB, and greater than 1MB.  Note the different y-axis scales for each group of request sizes. Whiskers show $1.25 \times$ the inter-quartile range. For both \name and Optimal, performance benefits come from preventing short flows from queueing behind long ones. \fc{Status quo whiskers are too large to fit on plot, mention the number here.}}
     \label{fig:eval:best}
 \end{figure}
 \newcommand{\overviewBenefitsBaselineMedian}{\Sexpr{round(overview_benefits_baseline_results[1], 2)}\xspace}
