--- a/inelastic-cross.tex
+++ b/inelastic-cross.tex
@@ -5,6 +5,6 @@
 \includegraphics[width=\maxwidth]{figure/robust:cr-inelastic-1} 
 
 \end{knitrout}
-    \caption{Against cross traffic comprising of short lived flows. \name and the cross traffic combined offer 84Mbps of load to the bottleneck queue. The cross traffic's offered load increases along the x-axis.}
+    \caption{Against cross traffic comprising of short lived flows. \name offers 48Mbps of load to the bottleneck queue. The cross traffic's offered load increases along the x-axis, while \name{}'s offered load remains fixed.}
     \label{fig:robust:cr-inelastic}
 \end{figure}
