--- a/eval.tex
+++ b/eval.tex
@@ -9,6 +9,7 @@ Given \name's ability to move the in-network queues to the \inbox (as shown earl
     \item Do \name's performance benefits hold across different scenarios? (\S\ref{s:robust:cross})
     %\item Under what conditions do \name's performance benefits hold? (\S\ref{s:robust:cross})
 \end{enumerate}
+\fc{Come back and update these after eval is finished}
 
 
 \subsection{Experimental Setup}\label{s:eval:setup}
@@ -27,11 +28,12 @@ Throughout our experiments, CPU utilization on the machines remained below $10$\
 Unless otherwise specified, we emulate the following scenario.
 A many-threaded client generates requests from a request size CDF drawn from an Internet core router~\cite{caida-dataset}, and assigns them to one of $200$ server processes on the traffic generator.
 The workload is heavy-tailed: 97.6\% of requests are 10KB or shorter, and the largest 0.002\% of requests are between $5$MB and $100$MB.
-Each server then sends the requested amount of data to the client and we measure the flow completion time of each such request. \an{In addition, the server also generates a persistently backlogged connection to the client.}
+Each server then sends the requested amount of data to the client and we measure the flow completion time of each such request. 
+%\an{In addition, the server also generates a persistently backlogged connection to the client.}
 %We use multiple server processes to emulate multiple machines behind the \name at the customer's edge.
-The link bandwidth at the mahimahi link is set to 96Mbps, and the one-way delay is set to 25ms. The requests result in an offered load of 84Mbps. 
+The link bandwidth at the mahimahi link is set to 96Mbps, and the RTT is set to 50ms. The requests result in an offered load of 84Mbps. 
 
-The endhost runs Cubic~\cite{cubic} congestion controller, and the \inbox runs Copa~\cite{copa} (we test other schemes in \S\ref{s:eval:cc}). The \inbox schedules traffic using stochastic fair queueing~\cite{sfq} in our experiments by default (we use other policies in \S\ref{s:eval:policies}). Each experiment is comprised of $100,000$ requests sampled from this distribution, across $10$ runs each with a different random seed. 
+The endhost runs Cubic~\cite{cubic} congestion controller, and the \inbox runs Copa~\cite{copa} (we test other schemes in \S\ref{s:eval:cc}) with the Nimbus~\cite{nimbus} elasticity detection mechanism. The \inbox schedules traffic using stochastic fair queueing~\cite{sfq} in our experiments by default (we use other policies in \S\ref{s:eval:policies}). Each experiment is comprised of $100,000$ requests sampled from this distribution, across $10$ runs each with a different random seed. 
 
 \subsection{Understanding Performance Benefits}\label{s:eval:fct}
 
