Updates from Overleaf

--- a/conclusion.tex
+++ b/conclusion.tex
@@ -2,4 +2,4 @@
 We have described \name, a new type of middlebox which uses congestion control to shift the queues from the middle of the network, where it is difficult to unilaterally express scheduling policy, to the edge, where doing so is tractable.
 We demonstrate that it is possible to shift queues and schedule packets to an extent sufficient to express well-known scheduling disciplines: in our experiments, we used fair queueing to improve median FCTs by \overviewBenefitsBundlerMedianImprovement, strict prioritization to improve $99$\%ile FCTs of a high-priority traffic class by \strictPrioImprovement, and AQM to reduce end-to-end packet delays by \delaysImprovement.
 
-\paragrapha{Statement of ethics considerations} This work does not raise any ethical issues.
+%\paragrapha{Statement of ethics considerations} This work does not raise any ethical issues.
