--- a/varying-offered-load.tex
+++ b/varying-offered-load.tex
@@ -9,6 +9,6 @@
     \label{fig:eval:offeredload}
 \end{figure}
 %
-\newcommand{\highUtilTailImprove}{-1\%\xspace}
-\newcommand{\medUtilTailImprove}{-1\%\xspace}
-\newcommand{\lowUtilTailImprove}{0\%\xspace}
+%\newcommand{\highUtilTailImprove}{round(highUtilTailImprove, 0)\%\xspace}
+%\newcommand{\medUtilTailImprove}{round(medUtilTailImprove, 0)\%\xspace}
+%\newcommand{\lowUtilTailImprove}{round(lowUtilTailImprove, 0)\%\xspace}
