--- a/packages.tex
+++ b/packages.tex
@@ -86,8 +86,9 @@
 \usepackage{alltt}
 %
 %\captionsetup[table]{skip=-1pt,font={footnotesize}}
-%\captionsetup[subfigure]{skip=-1pt,font={footnotesize}}
-\captionsetup[figure]{font={small}}
+\captionsetup[subfigure]{skip=-1pt,font={footnotesize}}
+\captionsetup[figure]{skip=-1pt,font={small}}
+\addtolength{\belowcaptionskip}{-10pt}
 \Urlmuskip=0mu plus 1mu
 \hypersetup{%
   colorlinks=true,      % false: boxed links; true: colored links
