add the big experiment

--- a/packages.tex
+++ b/packages.tex
@@ -32,6 +32,7 @@
 \usepackage{hhline}
 \usepackage{appendix}
 \usepackage{outlines}
+\usepackage[english]{babel}
 %\usepackage{sparklines}
 %
 %% maxwidth is the original width if it is less than linewidth
