--- a/robust.tex
+++ b/robust.tex
@@ -1,7 +1,9 @@
 \subsection{Impact of Cross Traffic}
 \label{s:robust:cross}
 
-\an{put big experiment here}
+\input{big_exp}
+Can \name successfully revert to status-quo performance in the presence of buffer-filling cross traffic, then resume providing benefits once that cross traffic leaves?
+In Figure~\ref{fig:eval:big_exp}, we \an{show something}.
 
 In studying the impact of cross traffic, we present results with both Nimbus and Copa being used as the congestion control algorithm at the \inbox.
 
