--- a/design.tex
+++ b/design.tex
@@ -41,9 +41,10 @@ In contrast, a \name deployed at the edge is able to shift the queue to its \inb
 \end{figure}
 
 Figure~\ref{fig:design:block-diag} shows \name's sub-systems: 
-(1) A datapath for packet processing. Any modern middlebox datapath, \eg BESS~\cite{bess}, P4~\cite{p4}, or as in our prototype implementation (\S\ref{s:impl}), Linux tc qdiscs, would be suitable.
-(2) A congestion feedback mechanism and (3) measurement calculation module. We discuss options for implementing the congestion feedback mechanism in \S\ref{s:design:twosided} and how to use that feedback in the measurement module in \S\ref{s:measurement}.
-(4) A congestion control module which integrates delay-control, as discussed above, and cross-traffic detection, discussed in \S\ref{s:design:whichcc}.
+(1) A congestion control module at the \inbox which implements the rate control logic and cross-traffic detection, as discussed in \S\ref{s:design:whichcc}.
+(2) A mechanism for sending congestion feedback in the \outbox, and (3) a measurement module in the \inbox that computes congestion signals (RTT and receive rate) from the received feedback. We discuss options for implementing congestion feedback mechanism in \S\ref{s:design:twosided} and how to use that feedback in the measurement module in \S\ref{s:measurement}.
+(4) A datapath for packet processing (which includes rate enforcement and packet scheduling). Any modern middlebox datapath, \eg BESS~\cite{bess}, P4~\cite{p4}, or  Linux tc qdiscs (as used in our prototype implementation (\S\ref{s:impl}), is suitable.
+We discuss the specific interaction between these subsys
 
 \an{radhika, pls check this subsection and the figure. I think it no longer requires understanding how everything works and is more of an overview?}
 
